# DiagAutoClinicOS

./: .gitignore  AI_IMPLEMENTATION_PLAN.md  AI_RULES.md  AUTODIAG_5_DAY_RELEASE_PLAN.md  AUTODIAG_CRASH_DIAGNOSIS_AND_FIX_REPORT.md  AUTODIAG_CRASH_FIX_REPORT.md  AUTODIAG_CRITICAL_PATH_ANALYSIS.md  AUTODIAG_IMPLEMENTATION_REPORT.md  AUTODIAG_IMPLEMENTATION_TIMELINE.md  AUTODIAG_SUCCESS_CRITERIA.md  AutoDiag_Setup.iss  AutoDiag_Setup.~is  CHANGELOG.md  COMMUNITY_DISCUSSIONS.md  DATABASE_COMPRESSION_REPORT.md  DEPLOYMENT_STRATEGY.md  ELITE_CRASH_FIX_IMPLEMENTATION_REPORT.md  GODIAG_GT100_PLUS_GPT_Detailed_Guide.md  GT100_GPT_Setup_Guide.md  GT100_GPT_VCI_Integration_Summary.md  INNO_SETUP_README.md  INTEGRATION_COMPLETE.md  LAUNCHER_FREEZE_DIAGNOSIS_REPORT.md  List-Structure.ps1  MXPLUS_GT100_GPT_COMPREHENSIVE_TEST_REPORT.md  PULL_REQUEST_TEMPLATE.md  PYTHON_3.10_COMPATIBILITY.md  QUICKSTART.md  README.md  SCANMATIK_2_PRO_INTEGRATION_GUIDE.md  SECURITY.md  SPONSOR_COMPREHENSIVE_PROGRESS_REPORT_2025.md  TAB_SEPARATION_SUMMARY.md  TODAY_LIVE_TESTING_COMPREHENSIVE_SPONSOR_REPORT.md  VALIDATION_SUMMARY.md  VCI_FREEZE_FIX_REPORT.md  VCI_SCAN_FIX_DOCUMENTATION.md  add_responsive_behavior.py  advanced_compress.py  analyze_ref_files.py  (+109 more)
.github/: FUNDING.yml  copilot-instructions.md
.venv-32/: pyvenv.cfg
AutoDiag/: HARDWARE_IMPLEMENTATION_TASK_LIST.md  IMPLEMENTATION_SUMMARY.md  RELEASE_TASK_LIST.md  autodiag_crash_debug.py  autodiag_crash_log.txt  console_diag.py  dialogs.py  dual_device_engine.py  main.py  (+6 more)
AutoDiag/native/: CMakeLists.txt  README.md  j2534_native_probe.cpp
(+1236 files in other folders)
